# rust-client

./: .env.example  CHANGELOG.md  Cargo.toml  README.md
rho-contracts-examples/: echo.rho
rho_examples/: stdout.rho  test_systemvault.rho
scripts/: smoke_test.sh
src/: args.rs  connection_manager.rs  dispatcher.rs  f1r3fly_api.rs  http_client.rs  lib.rs  registry.rs  rholang_helpers.rs  signing.rs  vault.rs
src/commands/: crypto.rs  load_test.rs  network.rs  query.rs
src/utils/: crypto.rs
